# recipes

./: .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yaml  heroku.yml  main.py  pyproject.toml
.github/workflows/: python.yml  tag.yml
api/: __init__.py  categories.py  chefs.py  ingredients.py  profiles.py  recipes.py  tokens.py  users.py
core/: config.py  security.py
crud/: __init__.py  base.py  crud_category.py  crud_chef.py  crud_ingredient.py  crud_profile.py  crud_recipe.py  crud_recipe_ingredient.py  crud_user.py
db/: base.py  base_class.py  session.py
migrations/: env.py  script.py.mako
migrations/versions/: 20210311_42ffb12de511.py  20210320_09afcab3dd88.py  20210401_a45ff594aad8.py  20210415_44a4e5ba0789.py  20211010_61b3cdf1369f.py
models/: category.py  chef.py  ingredient.py  profile.py  recipe.py  recipe_ingredient.py  user.py
repositories/: base.py  category.py  chef.py  ingredient.py  recipe.py  recipe_ingredient.py  user.py
schemas/: __init__.py  category.py  chef.py  ingredient.py  profile.py  recipe.py  recipe_ingredient.py  token.py  user.py
static/css/: ff.css
templates/: about.html  categories.html  category.html  chefs.html  layout.html  profiles.html  recipe.html
tests/: conftest.py
tests/api/: test_categories.py  test_chefs.py  test_ingredients.py  test_recipes.py
tests/crud/: test_crud_category.py  test_crud_chef.py  test_crud_ingredient.py  test_crud_profile.py  test_crud_recipe.py  test_crud_user.py
tests/repositories/: test_category.py  test_chef.py  test_ingredient.py  test_recipe.py  test_user.py
web/: __init__.py  about.py  categories.py  chefs.py  profiles.py  recipes.py
