[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fantasy-recipe"
version = "2.0.0"
description = "Fantasy recipes"
authors = []

[tool.poetry.dependencies]
alembic = "^1.7.5"
anyio = {extras = ["trio"], version = "^3.3.4"}
appdirs = "^1.4.4"
asyncpg = "^0.25.0"
databases = {extras = ["postgresql"], version = "^0.5.3"}
fastapi = "^0.70.0"
Jinja2 = "^3.0.3"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pydantic = "^1.8.2"
python = "^3.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.27"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"
coverage = {extras = ["toml"], version = "^6.1.1"}
mypy = "^0.910"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
