[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "fantasy-recipe"
version = "2.0.0"
description = "Fantasy recipes"
authors = []
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "alembic>=1.9.4",
    "asyncpg>=0.27.0",
    "fastapi>=0.92.0",
    "Jinja2>=3.1.2",
    "passlib[argon2]>=1.7.4",
    "pydantic>=1.10.5",
    "python-jose[cryptography]>=3.3.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.5",
    "SQLAlchemy[asyncio, mypy]>=2.0.4",
    "uvicorn[standard]>=0.20.0",
]
[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "coverage[toml]>=7.2",
    "mypy>=1.0",
    "pytest>=7.2.1",
    "requests>=2.28.2",
    "httpx>=0.23.3",
]

[project.urls]
homepage = ""

[tool]
[tool.pdm.scripts]
server = "uvicorn main:app --host 0.0.0.0 --port $PORT --reload"
test = "coverage run -m pytest tests/ --junitxml=junit.xml"
post_test = "coverage report -m"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
exclude = [
    "^__pypackages__/",
    "^migrations/",
    "^db/",
    "^repositories/",
]

[tool.pytest.ini_options]
markers = [
    "webtest: marks tests as slow (deselect with '-m \"not slow\"')",
]
[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "__pypackages__/*"
]
[tool.coverage.report]
skip_empty = true
show_missing = true
